Model Updates
- Add id to character snapshots
- Add missing instance code to weapon details request
- Add GetSnapshot endpoint
