# api/openapi.yaml
@@ -22,7 +22,7 @@ paths:
         - $ref: "#/components/parameters/X-User-ID"
         - $ref: "#/components/parameters/X-Membership-ID"
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       responses:
         200:
           description: "Current user info"
@@ -99,7 +99,7 @@ paths:
     get:
       operationId: GetSnapshots
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       description: "Returns a list of snapshots in the system for a character"
       parameters:
         - $ref: "#/components/parameters/X-User-ID"
@@ -122,13 +122,40 @@ paths:
             type: string
       responses:
         200:
-          description: ""
+          description: "Returns an array of all snapshots for a character"
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: "#/components/schemas/CharacterSnapshot"
+
+  /snapshots/{snapshotId}:
+    get:
+      operationId: GetSnapshot
+      security:
+        - bearerAuth: [ ]
+      description: "Returns a snapshot in the system for a character"
+      parameters:
+        - $ref: "#/components/parameters/X-User-ID"
+        - name: snapshotId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The unique identifier for the snapshot.
+        - name: characterId
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: "Specific character snapshot"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CharacterSnapshot"
 
   /activities:
     get:
@@ -165,7 +192,7 @@ paths:
               schema:
                 type: array
                 items:
-                 $ref: "#/components/schemas/ActivityHistory"
+                  $ref: "#/components/schemas/ActivityHistory"
   /activities/{activityId}:
     get:
       operationId: GetActivity
@@ -176,7 +203,7 @@ paths:
           in: query
           required: true
           schema:
-           type: string
+            type: string
         - name: activityId
           in: path
           required: true
@@ -249,12 +276,18 @@ components:
         - items
         - timestamp
         - characterId
+        - id
       properties:
+        id:
+          type: string
+          description: "Id of the snapshot"
+          x-oapi-codegen-extra-tags:
+            firestore: "id"
         characterId:
           type: string
           description: "Id of the character being recorded"
           x-oapi-codegen-extra-tags:
-             firestore: "characterId"
+            firestore: "characterId"
         timestamp:
           type: string
           format: date-time
@@ -303,36 +336,36 @@ components:
           $ref: "#/components/schemas/ItemDetails"
 
     ActivityHistory:
-     type: object
-     required:
-       - referenceId
-       - activityHash
-       - instanceId
-       - location
-       - description
-       - activity
-     properties:
-       location:
-         type: string
-       activity:
-        type: string
-       description:
-         type: string
-       referenceId:
-         type: integer
-         format: int64
-       activityHash:
-        type: integer
-        format: int64
-        description: "Hash id of the type of activity: Strike, Competitive, QuickPlay, etc. "
-       instanceId:
-         type: string
-         description: "Id to get more details about the particular game"
-       isPrivate:
-         type: boolean
-       mode:
-         type: string
-         description: "Name of the Destiny Activity Mode"
+      type: object
+      required:
+        - referenceId
+        - activityHash
+        - instanceId
+        - location
+        - description
+        - activity
+      properties:
+        location:
+          type: string
+        activity:
+          type: string
+        description:
+          type: string
+        referenceId:
+          type: integer
+          format: int64
+        activityHash:
+          type: integer
+          format: int64
+          description: "Hash id of the type of activity: Strike, Competitive, QuickPlay, etc. "
+        instanceId:
+          type: string
+          description: "Id to get more details about the particular game"
+        isPrivate:
+          type: boolean
+        mode:
+          type: string
+          description: "Name of the Destiny Activity Mode"
 
     Pong:
       type: object
